# Mnyrve

./: .gitignore  .travis.yml  LICENSE  README.md  WORKSPACE  add_paths.sh  gtest.BUILD  pre_build.sh
algorithms/: BUILD.bazel
algorithms/include/: ArmedBandits.h  armed_bandits.h  iterative_policy_evaluation.h  policy_iteration.h  value_iteration.h
algorithms/src/: armed_bandits.cc  iterative_policy_evaluation.cc  policy_iteration.cc  value_iteration.cc
algorithms/test/: BUILD.bazel  armed_bandits_test.cc  iterative_policy_evaluation_test.cc  policy_iteration_test.cc  value_iteration_test.cc
common/: BUILD.bazel  domain_types.h  error_macros.h  types.h
common/include/: error_macros.h  types.h
constructs/: BUILD.bazel  discrete_markov_process.cc  discrete_markov_process.h  markov_process.cc  markov_process.h
constructs/include/: discrete_markov_process.h  discrete_oracle.h  epsilon_greedy.h  finite_mdp.h  finite_policy.h  finite_q_function.h  finite_v_function.h
constructs/src/: discrete_markov_process.cc  discrete_oracle.cc  epsilon_greedy.cc  finite_mdp.cc  finite_policy.cc  finite_q_function.cc  finite_v_function.cc
constructs/test/: BUILD.bazel  discrete_oracle_test.cc  epsilon_greedy_test.cc  finite_mdp_test.cc  finite_policy_test.cc  finite_q_function_test.cc  finite_v_function_test.cc
environments/: BUILD.bazel
environments/grid_world/include/: grid_world.h
environments/grid_world/src/: grid_world.cc
environments/grid_world/test/: BUILD.bazel  grid_world_test.cc
examples/basic/: BUILD.bazel  k_armed_bandits.cc
examples/environments/: BUILD.bazel  grid_world_ipe.cc  grid_world_iterative_policy_evaluation.cc  grid_world_policy_iteration.cc  grid_world_value_iteration.cc
math/: BUILD.bazel  incremental_average.h  matrix_checks.h
math/include/: incremental_average.h  matrix_checks.h
math/matrix/include/: matrix_checks.h  matrix_operations.h
math/matrix/test/: BUILD.bazel  matrix_checks_test.cc  matrix_operations_test.cc
math/misc/include/: incremental_average.h
math/misc/test/: BUILD.bazel  incremental_average_test.cc
math/probability/include/: continuous_probability_distribution.h  normal_distribution.h  uniform_distribution.h
math/probability/src/: continuous_probability_distribution.cc  normal_distribution.cc  uniform_distribution.cc
math/probability/test/: BUILD.bazel  normal_distribution_test.cc  uniform_distribution_test.cc
math/statistics/include/: sampler.h
math/statistics/src/: sampler.cc
math/statistics/test/: BUILD.bazel  sampler_test.cc
math/tensor/include/: tensor3.h  tensor4.h
math/tensor/test/: BUILD.bazel  tensor3_test.cc  tensor4_test.cc
math/test/: BUILD.bazel  incremental_average_test.cc  matrix_operations_test.cc  normal_distribution_test.cc  uniform_distribution_test.cc
tools/: bazel.rc
tools/data/: BUILD.bazel  mnyrve_path.txt  python_paths.txt
tools/starlark/: BUILD.bazel  python_repository.bzl  repository.bzl  utility.bzl
utility/: BUILD.bazel
utility/include/: path_util.h
utility/src/: path_util.cc
visualization/: BUILD.bazel
visualization/include/: plot2d.h
visualization/python/: grid_world.py  plot2d.py
visualization/src/: plot2d.cc  test.cc
