# -*- python -*-

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "armed_bandits",
    hdrs = ["include/armed_bandits.h"],
    srcs = ["src/armed_bandits.cc"],
    deps = [
        "//common:macros",
        "//common:types",
        "//constructs:epsilon_greedy",
        "//math:matrix_operations",
        "//math:incremental_average",
        "//third_party/Eigen:eigen",
    ],
)

cc_library(
    name = "iterative_policy_evaluation",
    hdrs = ["include/iterative_policy_evaluation.h"],
    srcs = ["src/iterative_policy_evaluation.cc"],
    deps = [
        "//common:macros",
        "//constructs:finite_mdp", 
        "//constructs:finite_policy",
        "//constructs:finite_v_function",
        "//third_party/Eigen:eigen",
    ],
)
