cc_library(
    name = "types",
    hdrs = [
        "include/types.h",
    ],
    copts = ["-Icommon/include"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "macros",
    hdrs = [
        "include/error_macros.h",
    ],
    copts = ["-Icommon/include"],
    visibility = ["//visibility:public"],
)
  
