# -*- python -*-

package(default_visibility = ["//visibility:public"])

# Combined macros target
cc_library(
    name = "macros",
    deps = [
        ":error_macros",
    ],
)
        

cc_library(
    name = "types",
    hdrs = [
        "include/types.h",
    ],
)

cc_library(
    name = "error_macros",
    hdrs = [
        "include/error_macros.h",
    ],
    deps = ["//third_party/Eigen:eigen"],
)
  
