# -*- python -*-

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "finite_mdp",
    hdrs = ["include/finite_mdp.h"],
    srcs = ["src/finite_mdp.cc"],
    deps = [
        "//common:macros",
        "//math:matrix_math",
        "//third_party/Eigen:eigen",
    ],
)

cc_library(
    name = "discrete_oracle",
    hdrs = ["include/discrete_oracle.h"],
    srcs = ["src/discrete_oracle.cc"],
    deps = [
        "//common:macros",
        "//third_party/Eigen:eigen",
    ],
)

cc_library(
    name = "epsilon_greedy",
    hdrs = ["include/epsilon_greedy.h"],
    srcs = ["src/epsilon_greedy.cc"],
    deps = [
        "//common:macros",
        "//math:uniform_distribution", 
        "//math:sampler",
    ],
)
