cc_library(
    name = "matrix_math",
    hdrs = [
        "matrix/include/matrix_checks.h"
    ],
    deps = [
        "//common:types",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "misc_math",
    hdrs = [
        "misc/include/incremental_average.h"
    ],
    deps = [
        "//common:macros",
        "//common:types",
        "//third_party/Eigen:eigen",
    ],
    visibility = ["//visibility:public"],
)
