cc_library(
    name = "matrix_math",
    hdrs = [
        "matrix/include/matrix_checks.h"
    ],
    deps = [
        "//common:types",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "misc_math",
    hdrs = [
        "misc/include/incremental_average.h"
    ],
    deps = [
        "//common:macros",
        "//common:types",
        "//third_party/Eigen:eigen",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "probability_math",
    hdrs = [
        "probability/include/continuous_probability_distribution.h",
    ],
    srcs = [
        "probability/src/continuous_probability_distribution.cc",
    ],
    deps = [
        "//common:macros",
        "//third_party/Eigen:eigen",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "uniform_distribution",
    hdrs = ["probability/include/uniform_distribution.h"],
    srcs = ["probability/src/uniform_distribution.cc"],
    deps = [
        "//math:probability_math",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "normal_distribution",
    hdrs = ["probability/include/normal_distribution.h"],
    srcs = ["probability/src/normal_distribution.cc"],
    deps = [
        "//math:probability_math",
    ],
    visibility = ["//visibility:public"],
)


