# -*- python -*-

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "plot2d",
    hdrs = [
        "include/plot2d.h",
    ],
    srcs = ["src/plot2d.cc"],
    data = ["//tools/data:python_paths.txt"],
    deps = [
            "//utility:path_util",
            "@python3_rep//:python3",
    ],

)

cc_binary(
    name = "test",
    srcs = ["src/test.cc"],
    data = [
    ],
    deps = [
        "//visualization:plot2d",
    ],
)






  
