# -*- python -*-

cc_test(
    name = "armed_bandits_test",
    srcs = ["armed_bandits_test.cc"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@gtest//:main", 
        "//algorithms:armed_bandits",
    ]
)

cc_test(
    name = "iterative_policy_evaluation_test",
    srcs = ["iterative_policy_evaluation_test.cc"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@gtest//:main", 
        "//algorithms:iterative_policy_evaluation",
        "//math:tensor3",
    ]
)
