# -*- python -*-

cc_test(
    name = "discrete_oracle_test",
    srcs = ["discrete_oracle_test.cc"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@gtest//:main", 
        "//constructs:discrete_oracle",
    ],
)

cc_test(
    name = "epsilon_greedy_test",
    srcs = ["epsilon_greedy_test.cc"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@gtest//:main", 
        "//constructs:epsilon_greedy",
    ],
)

cc_test( 
    name = "finite_v_function_test", 
    srcs = ["finite_v_function_test.cc"], 
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@gtest//:main", 
        "//constructs:finite_v_function",
    ], 
)

cc_test( 
    name = "finite_q_function_test", 
    srcs = ["finite_q_function_test.cc"], 
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@gtest//:main", 
        "//constructs:finite_q_function",
    ], 
)

cc_test( 
    name = "finite_mdp_test", 
    srcs = ["finite_mdp_test.cc"], 
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@gtest//:main", 
        "//common:types", 
        "//constructs:finite_mdp",
        "//math:tensor3",
        "//third_party/Eigen:eigen",
    ], 
)

