# -*- python -*-

# Combined dependencies that may be useful to include

cc_binary(
    name = "k_armed_bandits",
    srcs = ["k_armed_bandits.cc"],
    deps = ["//algorithms:armed_bandits",
            "//constructs:discrete_oracle",
            "//math:distributions",
            "//math:sampler",
            "//third_party/Eigen:eigen",
            "@gflags_repo//:gflags",
    ],
)
