cc_test(
    name = "incremental_average_test",
    srcs = ["incremental_average_test.cc"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@gtest//:main", 
        "//common:types", 
        "//math:misc_math",
        "//third_party/Eigen:eigen",
    ]
)

cc_test(
    name = "uniform_distribution_test",
    srcs = ["uniform_distribution_test.cc"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@gtest//:main", 
        "//math:uniform_distribution",
    ]
)

cc_test(
    name = "normal_distribution_test",
    srcs = ["normal_distribution_test.cc"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@gtest//:main", 
        "//math:normal_distribution",
    ]
)

cc_test(
    name = "sampler_test",
    srcs = ["sampler_test.cc"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@gtest//:main", 
        "//math:sampler",
        "//math:distributions",
    ]
)
