# -*- python -*-

cc_test(
    name = "tensor3_test",
    srcs = ["tensor3_test.cc"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@gtest//:main", 
        "//math:tensor3",
    ],
)

cc_test(
    name = "tensor4_test",
    srcs = ["tensor4_test.cc"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@gtest//:main", 
        "//math:tensor4",
    ],
)
